--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+  box-sizing: border-box;
+}
+
+p,h4,h3,h2,h1,span,li,ul {
+  transform : rotate(0.04deg); 
+}
