mobile version added

--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -64,6 +64,24 @@ nav {
   width: 40%;
 }
 
+/* Navbar Modal */
+.navbar-modal {
+  opacity: 0;
+}
+
+.show-modal {
+  opacity: 1;
+  transition: 1s;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-column li {
+  margin-bottom: 25px;
+}
+
 @media screen and (max-width: 767px) {
   /* Invisible */
   .brand-name-box-2 {
