--- a/src/components/helpers/HomeHelper.css
+++ b/src/components/helpers/HomeHelper.css
@@ -1,12 +1,3 @@
-/* Top (background)*/
-.home-top-container {
-    background-image: url("../../../public/img/pexels-godisable-jacob-949670.webp");
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
 /* Mid (selection) */
 .home-mid-container h2 {
     margin-top: 50px;
@@ -33,6 +24,7 @@
     width: 90%;
     height: 100%;
     cursor: pointer;
+    transition: all 2s;
 }
 
 /* Phone */
