--- a/src/components/helpers/HomeHelper.css
+++ b/src/components/helpers/HomeHelper.css
@@ -15,16 +15,24 @@
 
 .selection-box {
     width: 30%;
+    max-width: 800px;
+    height: auto;
     text-align: center;
     margin: 10px;
+    opacity: 0;
+    transition: 1s;
+}
+
+.selection-box-scroll-event {
+    opacity: 1;
+    
 }
 
 .selection-box img {
     text-align: center;
     width: 90%;
-    height: 100%;
+    height: auto;
     cursor: pointer;
-    transition: all 2s;
 }
 
 /* Phone */
@@ -32,6 +40,7 @@
     /* Mid (selection) */
     .selection-box {
         width: 100%;
+        height: 100%;
     }
     .selection-box h4 {
         font-size: 12px;
