--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -91,6 +91,15 @@ nav {
   margin-bottom: 15px;
 }
 
+/* Not visible */
+.mobile-btn {
+    display: none;
+}
+
+.mobile-navbar {
+    display: none;
+}
+
 @media screen and (max-width: 767px) {
   /* Invisible */
   .brand-name-box-2 {
@@ -104,5 +113,56 @@ nav {
   .brand-name {
     /* background-color: blue; */
     width: 100%;
+  }
+
+  .brand-name-box-1 {
+    width: 100%;
+  }
+
+  .brand-name-box-1 h1 {
+    font-size: 20px;
+  }
+
+  .brand-name-box-1 h4 {
+    font-size: 14px;
+  }
+
+  .brand-name-box-2-mobile {
+    letter-spacing: 3px;
+    margin-bottom: 10px;
+    transform: translateX(50%);
+  }
+
+  .brand-name-box-2-mobile-translate {
+    transform: translateX(0%);
+    opacity: 1;
+    transition: all 1s;
+  }
+
+  .brand-name-box-2-mobile li {
+    font-size: 11px;
+  }
+
+  .mobile-btn {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .mobile-btn button {
+    border: none;
+    background-color: white;
+    color: grey;
+    margin-top: 5px;
+  }
+
+  .mobile-btn h4 {
+    font-size: 12px;
+    margin: 0;
+  }
+
+  .mobile-navbar {
+    display: block;
   }
 }
