--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -117,6 +117,7 @@ nav {
 
   .brand-name-box-1 {
     width: 100%;
+    margin-left: 10px;
   }
 
   .brand-name-box-1 h1 {
@@ -130,13 +131,13 @@ nav {
   .brand-name-box-2-mobile {
     letter-spacing: 3px;
     margin-bottom: 10px;
-    transform: translateX(50%);
+    transform: translateX(30%);
   }
 
   .brand-name-box-2-mobile-translate {
     transform: translateX(0%);
     opacity: 1;
-    transition: all 1s;
+    transition: all 0.5s;
   }
 
   .brand-name-box-2-mobile li {
@@ -164,5 +165,13 @@ nav {
 
   .mobile-navbar {
     display: block;
+  }
+
+  .flex-column {
+    align-items: flex-start;
+  }
+
+  .flex-column li {
+    margin-bottom: 10px;
   }
 }
