--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Lato', sans-serif;
 }
 
 div {
   box-sizing: border-box;
 }
 
-p,h4,h3,h2,h1,span,li,ul {
+p,h5,h4,h3,h2,h1,span,li,ul {
   transform : rotate(0.04deg); 
 }
