--- a/src/components/helpers/ItemSection.css
+++ b/src/components/helpers/ItemSection.css
@@ -1,65 +1,140 @@
 .item-top-bg {
-    height: 80vh;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
-    opacity: 0;
+  height: 80vh;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  opacity: 0;
 }
 
 .item-top-bg-fade {
-    opacity: 1;
-    transition: all 0.5s;
+  opacity: 1;
+  transition: all 0.5s;
 }
 
 .item-title {
-    text-align: center;
-    letter-spacing: 3px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+  text-align: center;
+  letter-spacing: 3px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .item-title button {
-    border: none;
-    height: 20px;
-    cursor: pointer;
-    margin-right: 10px;
-    margin-left: 10px;
-    color: black;
-    background-color: white;
+  border: none;
+  height: 20px;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-left: 10px;
+  color: black;
+  background-color: white;
 }
 
 .item-title button:hover {
-    opacity: 0.5;
+  opacity: 0.3;
 }
 
 .item-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .item-box {
-    width: 30%;
-    max-width: 800px;
-    height: auto;
-    text-align: center;
-    margin: 10px;
+  width: 30%;
+  max-width: 800px;
+  height: auto;
+  text-align: center;
+  margin: 10px;
 }
 
 .item-box img {
-    text-align: center;
-    width: 90%;
-    height: auto;
-    cursor: pointer;
+  text-align: center;
+  width: 90%;
+  height: auto;
+  cursor: pointer;
 }
 
-@media screen and (max-width:767px) {
-    .item-top-bg {
-        height: 60vh;
-    }
+.wishListBtn {
+  height: 35px;
+  border: 1px solid;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 10px;
+  cursor: pointer;
+  padding: 10px;
+}
 
-    .item-box {
-        width: 100%;
-    }
+.wishListBtn:hover {
+  background-color: black;
+  transition: 0.5s;
+  color: white;
+}
+
+.modal-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+  }
+
+.modal-bg {
+  width: 85%;
+  max-width: 500px;
+  background-color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.modal-title {
+    text-align: center;
+    min-height: calc(100% - 5rem);
+}
+
+.modal-button-container {
+    display: flex;
+    height: 5rem;
+}
+
+.modal-button-flexbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    width: 50%;
+}
+
+.modal-button-flexbox button {
+    width: 80%;
+    height: 50px;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.modal-button-flexbox button:hover {
+    opacity: 0.3;
+}
+
+
+@media screen and (max-width: 767px) {
+  .item-top-bg {
+    height: 60vh;
+  }
+
+  .item-box {
+    width: 100%;
+  }
+
+  .modal-button-flexbox button {
+    font-size: 11px;
+}
 }
