--- a/src/components/helpers/WishlistSection.css
+++ b/src/components/helpers/WishlistSection.css
@@ -24,7 +24,6 @@ table {
     border-collapse: collapse;
     width: 100%;
     max-width: 950px;
-    
     height: auto;
 }
 
@@ -83,4 +82,20 @@ td button:hover {
 
 .deleteBtn {
     color: red;
+}
+
+@media screen and (max-width: 767px) {
+    td {
+        font-size: 10px;
+        padding: 5px;
+        height: 80px;
+    }
+
+    td:nth-child(3) {
+        font-size: 8px;
+    }
+
+    button {
+        font-size: 8px;
+    }
 }
