--- a/src/components/helpers/WishlistSection.css
+++ b/src/components/helpers/WishlistSection.css
@@ -91,11 +91,16 @@ td button:hover {
         height: 80px;
     }
 
-    td:nth-child(3) {
-        font-size: 8px;
+    td:nth-child(1) {
+        width: 20%;
     }
 
-    button {
+    td:nth-child(3) {
+        width: 5%;
+        font-size: 9px;
+    }
+
+    td button {
         font-size: 8px;
     }
 }
