shopping cart section added

--- a/src/components/helpers/CartSection.css
+++ b/src/components/helpers/CartSection.css
@@ -1,4 +1,4 @@
-.wishlist-container {
+.cart-container {
     /* display: flex;
     justify-content: center;
     align-items: center;
@@ -6,12 +6,12 @@
     opacity: 0;
 }
 
-.wishlist-container-fade {
+.cart-container-fade {
     opacity: 1;
     transition: all 0.5s;
 }
 
-.wishlist-title {
+.cart-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,7 +19,7 @@
     /* background-color: red; */
 }
 
-.wishlist-title table {
+.cart-title table {
     margin-top: 20px;
     border-collapse: collapse;
     width: 100%;
@@ -27,80 +27,106 @@
     height: auto;
 }
 
-.wishlist-title th,td {
+.cart-title th,td {
     border-bottom: 1px solid #dddddd;
     border-top: 1px solid #dddddd;
     padding: 10px;
 }
 
-.wishlist-title td:nth-child(1) {
+.cart-title td:nth-child(1) {
     width: 10%;
 }
 
-.wishlist-title td:nth-child(2) {
+.cart-title td:nth-child(2) {
     width: 40%;
     text-align: center;
 }
 
-.wishlist-title td:nth-child(3) {
-    width: 10%;
+.cart-title td:nth-child(3) {
+    width: 15%;
     text-align: right;
 }
 
-.wishlist-title td:nth-child(4) {
+.cart-title td:nth-child(4) {
     width: 20%;
     text-align: right;
 }
 
-.wishlist-title td:nth-child(5) {
+.cart-title td:nth-child(5) {
     width: 10%;
     text-align: right;
 }
 
-.wishlist-title td img {
+.cart-title td img {
     width: 100%;
     cursor: pointer;    
 }
 
-.wishlist-title td button {
+.cart-title td button {
     margin-top: 2px;
     border: none;
     background-color: white;
+    color: black;
     font-weight: bold;
     height: 30px;
     cursor: pointer;
 }
 
-.wishlist-title td button:hover {
+.cart-title td button:hover {
     opacity: 0.3;
+    transform: scale(1.1);
     transition: all 0.2s;
 }
 
-.cartBtn {
-    color: black;
+.cart-color {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 12px;
 }
 
-.deleteBtn {
+.cart-size {
+    font-size: 12px;
+}
+
+.cart-minusBtn {
+    margin-right: 5px;
+    font-size: 20px;
+}
+
+.cart-plusBtn {
+    margin-left: 5px;
+    font-size: 15px;
+}
+
+.cart-deleteBtn {
     color: black;
 }
 
 @media screen and (max-width: 767px) {
-    .wishlist-title td {
+    .cart-title td {
         font-size: 10px;
         padding: 5px;
         height: 80px;
     }
 
-    .wishlist-title td:nth-child(1) {
+    .cart-title td:nth-child(1) {
         width: 20%;
     }
 
-    .wishlist-title td:nth-child(3) {
+    .cart-title td:nth-child(2) {
+        font-size: 9px;
+    }
+
+    .cart-title td:nth-child(3) {
         width: 5%;
         font-size: 9px;
     }
 
-    .wishlist-title td button {
+    .cart-title td button {
+        font-size: 8px;
+    }
+
+    .cart-color, .cart-size {
         font-size: 8px;
     }
 }
