--- a/src/components/helpers/ItemSection.css
+++ b/src/components/helpers/ItemSection.css
@@ -54,21 +54,24 @@
   cursor: pointer;
 }
 
+.wishlist-btn-container {
+  margin-bottom: 15px;
+}
+
 .wishListBtn {
   height: 35px;
-  border: 1px solid;
+  border: none;
   background-color: white;
-  color: black;
+  color: grey;
   font-weight: bold;
-  margin-bottom: 10px;
   cursor: pointer;
-  padding: 10px;
+  
 }
 
 .wishListBtn:hover {
-  background-color: black;
-  transition: 0.5s;
-  color: white;
+  color: red;
+  transform: scale(1.2);
+  transition: 0.3s;
 }
 
 .modal-container {
@@ -83,8 +86,9 @@
   }
 
 .modal-bg {
-  width: 85%;
-  max-width: 500px;
+  width: 95%;
+  max-width: 700px;
+  height: 30%;
   background-color: white;
   position: fixed;
   top: 50%;
@@ -95,12 +99,16 @@
 
 .modal-title {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     min-height: calc(100% - 5rem);
 }
 
 .modal-button-container {
     display: flex;
-    height: 5rem;
+    
 }
 
 .modal-button-flexbox {
@@ -115,7 +123,7 @@
     width: 80%;
     height: 50px;
     border: none;
-    background-color: white;
+    background: none;
     cursor: pointer;
     font-size: 12px;
 }
@@ -134,7 +142,18 @@
     width: 100%;
   }
 
+  .modal-bg {
+    height: 300px;
+    padding: 50px;
+  }
+
+  .modal-title {
+    font-size: 13px;
+    line-height: 30px;
+  }
+
   .modal-button-flexbox button {
-    font-size: 11px;
+    width: 100%;
+    font-size: 9px;
 }
 }
