--- a/src/components/helpers/ItemSection.css
+++ b/src/components/helpers/ItemSection.css
@@ -126,6 +126,7 @@
     background: none;
     cursor: pointer;
     font-size: 12px;
+    color: black;
 }
 
 .modal-button-flexbox button:hover {
@@ -154,6 +155,6 @@
 
   .modal-button-flexbox button {
     width: 100%;
-    font-size: 9px;
+    font-size: 10px;
 }
 }
