--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -73,6 +73,13 @@ nav {
 /* Navbar Modal */
 .navbar-modal {
   opacity: 0;
+  position: fixed;
+  width: 100%;
+  height: auto;
+  left: auto;
+  top: auto;
+  z-index: 5;
+  background-color: white;
 }
 
 .show-modal {
@@ -167,7 +174,6 @@ nav {
     border: none;
     background-color: white;
     color: grey;
-    
   }
 
   .mobile-btn h4 {
@@ -177,6 +183,13 @@ nav {
 
   .mobile-navbar {
     display: block;
+    position: fixed;
+    width: 100%;
+    height: auto;
+    left: auto;
+    top: auto;
+    z-index: 5;
+    background-color: white;
   }
 
   .flex-column {
