--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -74,17 +74,18 @@ nav {
 .navbar-modal {
   opacity: 0;
   position: fixed;
+  background-color: white;
   width: 100%;
+  margin-top: -10px;
   height: auto;
   left: auto;
   top: auto;
   z-index: 5;
-  background-color: white;
 }
 
 .show-modal {
   opacity: 1;
-  transition: 1s;
+  transition: all 0.5s;
 }
 
 .flex-column {
