--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -87,7 +87,7 @@ nav {
 .show-modal {
   opacity: 1;
   transform: translateY(0%);
-  transition: all 0.5s;
+  transition:all 0.5s;
 }
 
 .flex-column {
@@ -153,11 +153,11 @@ nav {
   .brand-name-box-2-mobile {
     letter-spacing: 3px;
     margin-bottom: 10px;
-    transform: translateX(30%);
+    transform: translateY(-10%);
   }
 
   .brand-name-box-2-mobile-translate {
-    transform: translateX(0%);
+    transform: translateY(0%);
     opacity: 1;
     transition: all 0.5s;
   }
