--- a/src/components/helpers/DetailSection.css
+++ b/src/components/helpers/DetailSection.css
@@ -141,6 +141,24 @@
   margin-top: -7px;
 }
 
+.detail-modal-bg {
+    position: fixed;
+    width: 95%;
+    max-width: 700px;
+    height: 30%;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    opacity: 0;
+  }
+
+.modal-fade {
+    opacity: 1;
+    transition: all 0.5s;
+}
+
 /* 4K */
 @media (min-width: 2561px) and (max-width: 3840px) {
   .detail-container {
@@ -220,6 +238,11 @@
 
   .detail-sizeBtn-container, .detail-quantity-container {
     text-align: center;
+  }
+
+  .detail-modal-bg {
+    height: 300px;
+    padding: 50px;
   }
 
 }
