--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -154,6 +154,7 @@ nav {
     letter-spacing: 3px;
     margin-bottom: 10px;
     transform: translateY(-10%);
+    opacity: 0;
   }
 
   .brand-name-box-2-mobile-translate {
@@ -184,13 +185,17 @@ nav {
     margin: 0;
   }
 
+  .navbar-modal {
+    background-color: white;
+    width: 100%;
+    margin-top: 0px;
+    z-index: 5;
+    position: static;
+  }
+
   .mobile-navbar {
     display: block;
-    position: fixed;
     width: 100%;
-    height: auto;
-    left: auto;
-    top: auto;
     z-index: 5;
     background-color: white;
   }
