--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -74,11 +74,9 @@ nav {
 .navbar-modal {
   position: fixed;
   background-color: white;
+  top: 83px;
   width: 100%;
-  margin-top: -10px;
   height: auto;
-  left: auto;
-  top: auto;
   z-index: 5;
   opacity: 0;
 }
@@ -204,17 +202,16 @@ nav {
   }
 
   .navbar-modal {
-    background-color: white;
-    width: 100%;
-    margin-top: 0px;
     z-index: 5;
     position: fixed;
+    top: 65px;
   }
 
   .mobile-navbar {
     display: block;
     position: fixed;
     width: 100%;
+    top: 75px;
     z-index: 5;
     background-color: white;
   }
