--- a/src/components/helpers/HomeHelper.css
+++ b/src/components/helpers/HomeHelper.css
@@ -1,50 +1,50 @@
 /* Mid (selection) */
 .home-mid-container h2 {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    letter-spacing: 3px;
-    text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  letter-spacing: 3px;
+  text-align: center;
 }
 
 .selection-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .selection-box {
-    width: 30%;
-    max-width: 800px;
-    height: auto;
-    text-align: center;
-    margin: 10px;
-    opacity: 0;
-    transition: 1s;
+  width: 30%;
+  max-width: 800px;
+  height: auto;
+  text-align: center;
+  margin: 10px;
+  opacity: 0;
+  transition: all linear 1s;
 }
 
 .selection-box-scroll-event {
-    opacity: 1;
+  opacity: 1;
 }
 
 .selection-box img {
-    text-align: center;
-    width: 90%;
-    height: auto;
-    cursor: pointer;
+  text-align: center;
+  width: 90%;
+  height: auto;
+  cursor: pointer;
 }
 
 /* Phone */
 @media screen and (max-width: 767px) {
-    /* Mid (selection) */
-    .selection-box {
-        width: 100%;
-        height: 100%;
-    }
-    .selection-box h4 {
-        font-size: 12px;
-    }
-    .selection-box h5 {
-        font-size: 10px;
-    }
+  /* Mid (selection) */
+  .selection-box {
+    width: 100%;
+    height: 100%;
+  }
+  .selection-box h4 {
+    font-size: 12px;
+  }
+  .selection-box h5 {
+    font-size: 10px;
+  }
 }
