--- a/src/components/helpers/WishlistSection.css
+++ b/src/components/helpers/WishlistSection.css
@@ -1,114 +1,201 @@
 .wishlist-container {
-    /* display: flex;
+  /* display: flex;
     justify-content: center;
     align-items: center;
     background-color: yellow; */
-    opacity: 0;
+  opacity: 0;
 }
 
 .wishlist-container-fade {
-    opacity: 1;
-    transition: all 0.5s;
+  opacity: 1;
+  transition: all 0.5s;
 }
 
 .wishlist-title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: red; */
 }
 
 .wishlist-title table {
-    margin-top: 20px;
-    border-collapse: collapse;
-    width: 100%;
-    max-width: 950px;
-    height: auto;
+  margin-top: 20px;
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 950px;
+  height: auto;
 }
 
-.wishlist-title th,td {
-    border-bottom: 1px solid #dddddd;
-    border-top: 1px solid #dddddd;
-    padding: 10px;
+.wishlist-title th,
+td {
+  border-bottom: 1px solid #dddddd;
+  border-top: 1px solid #dddddd;
+  padding: 10px;
 }
 
 .wishlist-title td:nth-child(1) {
-    width: 10%;
+  width: 10%;
 }
 
 .wishlist-title td:nth-child(2) {
-    width: 40%;
-    text-align: center;
+  width: 40%;
+  text-align: center;
 }
 
 .wishlist-title td:nth-child(3) {
-    width: 10%;
-    text-align: right;
+  width: 10%;
+  text-align: right;
 }
 
 .wishlist-title td:nth-child(4) {
-    width: 20%;
-    text-align: right;
+  width: 20%;
+  text-align: right;
 }
 
 .wishlist-title td:nth-child(5) {
-    width: 10%;
-    text-align: right;
+  width: 10%;
+  text-align: right;
 }
 
 .wishlist-title td img {
-    width: 100%;
-    cursor: pointer;    
+  width: 100%;
+  cursor: pointer;
 }
 
 .wishlist-title td button {
-    margin-top: 2px;
-    border: none;
-    background-color: white;
-    font-weight: bold;
-    height: 30px;
-    cursor: pointer;
+  margin-top: 2px;
+  border: none;
+  background-color: white;
+  font-weight: bold;
+  height: 30px;
+  cursor: pointer;
 }
 
 .wishlist-title td button:hover {
-    opacity: 0.3;
-    transition: all 0.2s;
+  opacity: 0.3;
+  transition: all 0.2s;
 }
 
 .cartBtn {
-    color: black;
+  color: black;
 }
 
 .wishilist-deleteBtn {
-    color: black;
+  color: black;
+}
+
+.wishlist-modal-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
+.wishlist-modal-bg {
+  position: fixed;
+  width: 95%;
+  max-width: 700px;
+  height: 30%;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  opacity: 0;
+}
+
+.wishlist-modal-fade {
+  opacity: 1;
+  transition: 0.5s linear;
+}
+
+.wishlist-modal-title {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100% - 5rem);
+}
+
+.wishlist-modal-button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.wishlist-modal-button-flexbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 50%;
+}
+
+.flexbox-center {
+  width: 50%;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.wishlist-modal-button-flexbox button {
+  width: 80%;
+  height: 50px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 12px;
+  color: black;
+}
+
+.wishlist-modal-button-flexbox button:hover {
+  opacity: 0.3;
 }
 
 @media screen and (max-width: 767px) {
-    .wishlist-title td {
-        font-size: 10px;
-        padding: 5px;
-        height: 80px;
-    }
+  .wishlist-title td {
+    font-size: 10px;
+    padding: 5px;
+    height: 80px;
+  }
 
-    .wishlist-title td:nth-child(1) {
-        width: 20%;
-    }
+  .wishlist-title td:nth-child(1) {
+    width: 20%;
+  }
 
-    .wishlist-title td:nth-child(3) {
-        width: 10%;
-        font-size: 9px;
-    }
+  .wishlist-title td:nth-child(3) {
+    width: 10%;
+    font-size: 9px;
+  }
 
-    .wishlist-title td:nth-child(4) {
-        width: 15%;   
-    }
+  .wishlist-title td:nth-child(4) {
+    width: 15%;
+  }
 
-    .wishlist-title td:nth-child(5) {
-        width: 15%;   
-    }
+  .wishlist-title td:nth-child(5) {
+    width: 15%;
+  }
 
-    .wishlist-title td button {
-        font-size: 8px;
-    }
+  .wishlist-title td button {
+    font-size: 8px;
+  }
+
+  .wishlist-modal-bg {
+    height: 300px;
+    padding: 50px;
+  }
+
+  .wishlist-modal-title {
+    font-size: 13px;
+    line-height: 30px;
+  }
+
+  .wishlist-modal-button-flexbox button {
+    width: 100%;
+    font-size: 10px;
+  }
 }
