--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -1,7 +1,7 @@
 /* Common */
 li {
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
   list-style-type: none;
   font-size: 13px;
   cursor: pointer;
@@ -37,7 +37,7 @@ nav {
 
 .brand-name {
   /* background-color: blue; */
-  width: 60%;
+  width: 70%;
 }
 
 .brand-name-box-1 {
@@ -45,7 +45,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 40%;
   height: 100%;
   letter-spacing: 2px;
 }
@@ -60,14 +60,15 @@ nav {
   /* background-color: yellow; */
   display: flex;
   align-items: center;
-  width: 50%;
+  justify-content: center;
+  width: 60%;
   height: 100%;
 }
 
 .nav-menu {
   /* background-color: yellow; */
   justify-content: flex-end;
-  width: 40%;
+  width: 30%;
 }
 
 /* Navbar Modal */
@@ -148,6 +149,32 @@ nav {
 @media (hover: hover) {
   li:hover {
     border-bottom: 1px solid black;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .brand-name-box-2 {
+    display: none;
+  }
+  .nav-menu {
+    display: none;
+  }
+
+  li {
+    font-size: 12px;
+  }
+
+  .mobile-btn {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .mobile-btn button {
+    border: none;
+    background-color: white;
+    color: grey;
   }
 }
 
