--- a/src/components/helpers/AboutSection.css
+++ b/src/components/helpers/AboutSection.css
@@ -62,10 +62,11 @@
 }
 
 .about-mid-introduction h3 {
-  letter-spacing: 1px;
+  font-family: Verdana, Dotum, AppleGothic, sans-serif;
 }
 
 .about-mid-introduction p {
+  font-family: Verdana, Dotum, AppleGothic, sans-serif;
   line-height: 30px;
 }
 
