--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap");
 
 body {
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -ms-overflow-style: none; /* 인터넷 익스플로러 */
@@ -14,13 +14,21 @@ body::-webkit-scrollbar {
 }
 
 code {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 div {
   box-sizing: border-box;
 }
 
-p,h5,h4,h3,h2,h1,span,li,ul {
-  transform : rotate(0.04deg); 
+p,
+h5,
+h4,
+h3,
+h2,
+h1,
+span,
+li,
+ul {
+  transform: rotate(0.04deg);
 }
