--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -37,7 +37,7 @@ nav {
 
 .brand-name {
   /* background-color: blue; */
-  width: 80%;
+  width: 90%;
 }
 
 .brand-name-box-1 {
@@ -45,9 +45,37 @@ nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 25%;
+  width: 15%;
   height: 100%;
   letter-spacing: 2px;
+}
+
+.navbar-content-box {
+  /* background-color: blue; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 15%;
+  height: 100%;
+  letter-spacing: 2px;
+}
+
+.navbar-content-list-name {
+  pointer-events: none;
+  /* background-color: red; */
+  border-bottom: 1px dotted grey;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.navbar-content-list {
+  width: 100%;
+  /* background-color: red; */
+  display: flex;
+  margin-bottom: 20px;
+  justify-content: center;
 }
 
 .brand-name-box-1 h1 {
@@ -61,14 +89,19 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 75%;
+  width: 85%;
   height: 100%;
 }
 
 .nav-menu {
   /* background-color: red; */
   justify-content: flex-end;
-  width: 20%;
+  width: 15%;
+}
+
+.nav-menu li {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .nav-search {
@@ -76,7 +109,21 @@ nav {
 }
 
 .nav-search input {
+  width: 80px;
   height: 30px;
+  border: none;
+  border-bottom: 1px solid black;
+  transition: all 0.2s ease-out;
+}
+
+.nav-search input:focus {
+  width: 150px;
+}
+
+input[type="text"]:focus {
+  outline: none !important;
+  border: 2px solid orange;
+  border-radius: 5px;
 }
 
 /* Navbar Modal */
@@ -146,8 +193,15 @@ nav {
 }
 
 @media (hover: hover) {
-  li:hover {
+  .brand-name-box-2 li:hover {
     border-bottom: 1px solid black !important;
+  }
+
+  .navbar-content-list:hover {
+    transform: scale(1.1);
+    transition: 0.3s ease-out;
+    opacity: 0.5;
+    color: red;
   }
 }
 
@@ -243,5 +297,27 @@ nav {
 
   .animated {
     animation: show-modal-mobile 0.3s forwards linear;
+  }
+
+  .navbar-content-box {
+    /* background-color: blue; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    letter-spacing: 2px;
+  }
+
+  .navbar-content-list {
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: flex-start;
+  }
+
+  .navbar-indicator {
+    display: none;
   }
 }
