--- a/src/components/js/SearchModal.css
+++ b/src/components/js/SearchModal.css
@@ -1,11 +1,11 @@
 .search-bg {
   width: 100%;
-  height: 100%;
   background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: fixed;
 }
 
 .search-flex-container {
@@ -40,4 +40,19 @@
   transform: scale(1.1);
   opacity: 0.5;
   transition: 0.2s linear;
+}
+
+@media screen and (max-width: 767px) {
+  .search-bg {
+    width: 100%;
+    height: 40%;
+    left: auto;
+    top: 55%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+  }
 }
