--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -313,11 +313,11 @@ input[type="text"]:focus {
     width: 100%;
     /* background-color: red; */
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     justify-content: flex-start;
   }
 
-  .navbar-indicator {
+  .navbar-content-list-name {
     display: none;
   }
 }
