--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -115,7 +115,7 @@ nav {
 .nav-search input {
   width: 80px;
   height: 30px;
-  border: none;
+  border: 1px solid transparent;
   border-bottom: 1px solid black;
   transition: all 0.2s ease-out;
 }
