--- a/src/components/helpers/ItemSection.css
+++ b/src/components/helpers/ItemSection.css
@@ -144,6 +144,14 @@
     width: 100%;
   }
 
+  .item-title h2 {
+    font-size: 20px;
+  }
+
+  .item-title button {
+    font-size: 12px;
+  }
+
   .modal-bg {
     height: 300px;
     padding: 50px;
