--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -131,13 +131,29 @@ input[type="text"]:focus {
 }
 
 /* Navbar Modal */
+.navbar-modal-bg {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+}
+
 .navbar-modal {
   position: fixed;
   background-color: white;
   top: 83px;
   width: 100%;
   height: auto;
-  z-index: 5;
+  z-index: 10;
+}
+
+.animated-bg {
+  animation: show-modal-bg 0.3s forwards ease-out;
+}
+
+.animated-bg-hide {
+  animation: hide-modal-bg 0.3s forwards ease-out;
 }
 
 .animated {
@@ -146,6 +162,26 @@ input[type="text"]:focus {
 
 .animated-hide {
   animation: hide-modal 0.2s forwards linear;
+}
+
+@keyframes show-modal-bg {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes hide-modal-bg {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes show-modal {
