--- a/src/components/js/SearchModal.css
+++ b/src/components/js/SearchModal.css
@@ -1,11 +1,21 @@
+.search-black-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+}
+
 .search-bg {
   width: 100%;
+  height: auto;
   background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: fixed;
+  z-index: 10;
 }
 
 .search-flex-container {
