--- a/src/components/helpers/HomeHelper.css
+++ b/src/components/helpers/HomeHelper.css
@@ -1,3 +1,16 @@
+.image-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.image-hover {
+  position: absolute;
+  top: 0;
+  left: 5%;
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
+
 .home-top-bg {
   height: 100vh;
   background-repeat: no-repeat;
@@ -63,5 +76,11 @@
   }
   .selection-box h5 {
     font-size: 10px;
+  }
+}
+
+@media (hover: hover) {
+  .image-hover:hover {
+    opacity: 1;
   }
 }
