responsive design for tablet

--- a/src/components/helpers/CollectionSection.css
+++ b/src/components/helpers/CollectionSection.css
@@ -40,6 +40,13 @@
   height: 100%;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .collection-img-box {
+    width: 40%;
+    height: 500px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .collection-img-container {
     flex-wrap: wrap;
