--- a/src/components/helpers/ItemSection.css
+++ b/src/components/helpers/ItemSection.css
@@ -140,6 +140,20 @@
   opacity: 0.3;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .item-box h4 {
+    font-size: 12px;
+  }
+
+  .item-box h5 {
+    font-size: 11px;
+  }
+
+  .selection-box h6 {
+    font-size: 9px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .item-top-bg {
     height: 60vh;
