--- a/src/components/helpers/AboutSection.css
+++ b/src/components/helpers/AboutSection.css
@@ -13,6 +13,7 @@
 
 .about-top {
   width: 48.75%;
+  opacity: 0;
   height: 500px;
   margin-bottom: 40px;
 }
@@ -30,6 +31,7 @@
 }
 
 .about-top-img-flexbox-translate {
+  opacity: 1;
   transform: translateX(0%);
   transition: all 1.5s;
 }
@@ -139,6 +141,7 @@
 
   .about-top {
     width: 100%;
+    opacity: 0;
     height: 500px;
     margin-top: 40px;
     margin-bottom: 0px;
@@ -159,6 +162,7 @@
   }
 
   .about-top-img-flexbox-translate {
+    opacity: 1;
     transform: translateY(0%);
   }
 
