--- a/src/components/helpers/CollectionSection.css
+++ b/src/components/helpers/CollectionSection.css
@@ -11,7 +11,7 @@
 .collection-fade {
   opacity: 1;
   transform: translateY(0%);
-  transition: all 1s linear;
+  transition: all 1.3s;
 }
 
 .collection-title {
